istio-teaching/istioctl/tag.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  labels:
    app: sidecar-injector
    install.operator.istio.io/owning-resource: unknown
    istio.io/rev: default
    istio.io/tag: prod
    operator.istio.io/component: Pilot
    release: istio
  name: istio-revision-tag-prod
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZmlxWFM5QnV0dWVJbHdhZ2htbjhpakFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJeE1EVXlNVEEwTVRnME0xb1hEVE14TURVeApPVEEwTVRnME0xb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKdmZ1UmJGRUN4NXBYWCtaZDZoRkQ5MEJSVmpDaE1IaHVaK29MV1AKcG5GYlQ1dDFHMWZ6VDFTa3VBRFF3V2YwMm94OUVjK0NGMzk1RHdGZDc4ZVliMUlFVmF1c0w4ZTNyUWVRckJpVQpsUnNtM1F2WGo1RU [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
  failurePolicy: Fail
  name: rev.namespace.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - prod
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZmlxWFM5QnV0dWVJbHdhZ2htbjhpakFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJeE1EVXlNVEEwTVRnME0xb1hEVE14TURVeApPVEEwTVRnME0xb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKdmZ1UmJGRUN4NXBYWCtaZDZoRkQ5MEJSVmpDaE1IaHVaK29MV1AKcG5GYlQ1dDFHMWZ6VDFTa3VBRFF3V2YwMm94OUVjK0NGMzk1RHdGZDc4ZVliMUlFVmF1c0w4ZTNyUWVRckJpVQpsUnNtM1F2WGo1RU [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
  failurePolicy: Fail
  name: rev.object.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: DoesNotExist
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
    - key: istio.io/rev
      operator: In
      values:
      - prod
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
